Update README.md with Lab 05 details
Added detailed documentation for Lab 05 covering stubs, mocks, and project implementations.